Refactor to implement classes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br>
     <input type="text" name="author" id="author" placeholder="Author">
     <br>
-    <button type="submit" id="add-btn">Add</button>
+    <button type="button" id="add-btn">Add</button>
   </form>
   <script src="./js/dom.js"></script>
 </body>
